--- a/etiquetas.html
+++ b/etiquetas.html
@@ -34,6 +34,9 @@
             etiqueta  atributo= "valor" /--etiqueta--> <br>
              button  color= "rojo" </button> > <br>
             </section>
+        </article>
+
+            <aside>
 
             <h2>consta de muchas etiquetas <br>
             
@@ -43,6 +46,11 @@
                 <---h1></---h1---><br>
             EN EL CUERPO DE HTML TODO LO QUE ESTE DENTRO DE BODY SERA LO VISIBLE<br>
             </h2>
-    </article>
+        </aside>
+        <footer>
+            <h4>"Pagina recomendada para iniciar la investigacion"</h4>
+            <ul><li><a href= http://www.google.com.ar> GOOGLE</a></li></ul>
+        </footer>
+    
 </body>
 </html>
