--- a/multimedia.html
+++ b/multimedia.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>USO DE DIV</DIV></title>
+    <title>Multimedia</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
+    <link rel="icon" href="logo.ico.png"> 
 </head>
 <body>
 
@@ -19,19 +20,26 @@
           <li><a href="Listas.html">Listas HTML</a></li>
       </ul>
   </nav>
-    <h4>ESTE ES EL TITULO</h4>
+<center>
+    <h1>ESTE ES EL TITULO</h1>
     <p>
         Aqui va la <b>Imagen</b>:
         
     </p>
-    <img src="ezgif.com-gif-maker.gif">
+  </center>
+    <center> 
+    <img src="ezgif.com-gif-maker.gif" alt="Logo Animado" title="Logo">
+  </center>
   </div>
 
 <div>
-  <h4>ESTE ES UN SUBTITULO</h4>
+  <center>
+  <h2>ESTE ES UN SUBTITULO</h2>
+</center>
   <p>
     Aqui va el audio:
   </p>
+
   <audio src="y2mate.com - DrDre featSnoop Dogg Hold upfull song.mp3" controls></audio>
 </div>
 
